<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- See: https://codelabs.developers.google.com/codelabs/android-databinding/index.html?index=..%2F..index#2 -->
    <data>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/contDesc_titleImage"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/main" />

        <ImageButton
            android:id="@+id/main_buttonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:tint="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_info_black_48" />

        <TextView
            android:id="@+id/main_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorThemeThreeLight"
            android:text="@string/company_name"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/main_buttonLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/main_buttonLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorThemeThreeLight"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/main_buttonGallery"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default"
                android:background="@color/colorThemeThreeDark"
                android:text="@string/title_gallery" />

            <Button
                android:id="@+id/main_buttonViewCalls"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_default"
                android:layout_marginRight="@dimen/padding_default"
                android:layout_marginBottom="@dimen/padding_default"
                android:background="@color/colorThemeThreeDark"
                android:text="@string/title_view_calls" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>